--- a/css/style.css
+++ b/css/style.css
@@ -2155,6 +2155,15 @@ ol {
 	color: #b2b2b2;
 	border-radius: 15px;
 }
+.checkout__input textarea {
+	width: 100%;
+	height: 46px;
+	border: 1px solid #ebebeb;
+	padding-left: 20px;
+	font-size: 16px;
+	color: #b2b2b2;
+	border-radius: 15px;
+}
 
 .checkout__input input.checkout__input__add {
 	margin-bottom: 20px;
